--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 synthesis.ruleengine.workflow.engine.workflowpath = ./config/workflow_data/workflow_data.json
+# ------------------------------
+# H2 DATABASE CONFIGURATION
+# ------------------------------
+spring.h2.datasource.url=jdbc:h2:mem:testdb
+spring.h2.datasource.username=sa
+spring.h2.datasource.password=
+spring.h2.datasource.driver-class-name=org.h2.Driver
+spring.h2.datasource.test-while-idle=true 
+spring.h2.datasource.time-between-eviction-runs-millis=30000
+spring.h2.datasource.validation-query=select 1
+spring.h2.datasource.jdbcUrl=${spring.h2.datasource.url}
+spring.h2.datasource.console.enabled=true
+
+
+server.port=8080
