Changes for persisting each step

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 synthesis.ruleengine.workflow.engine.workflowpath = ./config/workflow_data/workflow_data.json
+#spring.aop.proxy-target-class=true
 # ------------------------------
 # H2 DATABASE CONFIGURATION
 # ------------------------------
@@ -13,4 +14,5 @@ spring.h2.datasource.jdbcUrl=${spring.h2.datasource.url}
 spring.h2.datasource.console.enabled=true
 
 
-server.port=8080
+
+#server.port=8080
