--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>syra-parent</artifactId>
-		<groupId>com.syra</groupId>
-		<version>1.0-SNAPSHOT</version>
+		<!-- <artifactId>syra-parent</artifactId> <groupId>com.syra</groupId> <version>1.0-SNAPSHOT</version> -->
+	    <groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.1.1.RELEASE</version> 
 	</parent>
-	<groupId>com.syra.workflow.engine</groupId>
-	<artifactId>syra-workflow</artifactId>
+	<groupId>com.workflow.engine</groupId>
+	<artifactId>wokflow-engine</artifactId>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
@@ -43,11 +44,6 @@
 		</dependency>
 
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
@@ -72,25 +68,14 @@
 
 	</dependencies>
 
-   <build>
-       <finalName>syra</finalName>
-       <plugins>
-           <plugin>
-               <groupId>org.springframework.boot</groupId>
-               <artifactId>spring-boot-maven-plugin</artifactId>
-               <version>2.0.5.RELEASE</version>
-               <configuration>
-                   <layout>ZIP</layout>
-               </configuration>
-               <executions>
-                   <execution>
-                       <goals>
-                           <goal>repackage</goal>
-                       </goals>
-                   </execution>
-               </executions>
-           </plugin>
-       </plugins>
-   </build>
+		<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
+
 
 </project>
